# streamingServer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  env.example  main.py
include/: HardwareEncoder.h  ScreenCapture.h  SignalingClient.h  StreamCommon.h  StreamingPipeline.h  WebRTCManager.h
src/: HardwareEncoder.cpp  ScreenCapture.cpp  SignalingClient.cpp  StreamingPipeline.cpp  WebRTCManager.cpp  main.cpp
